tests/paczka1/fuzzy1/16835594.err
Error in line 6: Ly1jIzL A621 93,7
Error in line 18: 40xqUgkbJA A621 40,5
Error in line 33: 40xqUgkbJA S356 -2,9
Error in line 36: M8sdHNKGe A173 48,0
